added food to swagger but haven't finished yet
